Making drone methods synchronized