@@ -13,10 +13,10 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.concurrent.ConcurrentHashMap;
 
 public class Drone implements AggregateRoot<DroneId> {
 
@@ -25,8 +25,8 @@ public class Drone implements AggregateRoot<DroneId> {
     private Position position;
     private final PayloadCapacity payloadCapacity;
     private String assignedDeliveryId;
-    private final Map<String, LocalDateTime> reservationsByDelivery = new HashMap<>();
-    private final List<DomainEvent> domainEvents = new ArrayList<>();
+    private final Map<String, LocalDateTime> reservationsByDelivery = new ConcurrentHashMap<>();
+    private final List<DomainEvent> domainEvents = Collections.synchronizedList(new ArrayList<>());
 
     private Drone(final DroneId id, final DroneStatus status, final Position position,
                   final PayloadCapacity payloadCapacity) {
@@ -41,7 +41,7 @@ public class Drone implements AggregateRoot<DroneId> {
         return new Drone(id, DroneStatus.AVAILABLE, position, payloadCapacity);
     }
 
-    public boolean isAvailable() {
+    public synchronized boolean isAvailable() {
         return status == DroneStatus.AVAILABLE;
     }
 
@@ -49,12 +49,12 @@ public class Drone implements AggregateRoot<DroneId> {
         return payloadCapacity.canCarry(weightKg);
     }
 
-    public boolean isSlotFree(final LocalDateTime slot) {
+    public synchronized boolean isSlotFree(final LocalDateTime slot) {
         return !reservationsByDelivery.containsValue(slot);
     }
 
 
-    public void reserveSlot(final String deliveryId, final LocalDateTime slot) {
+    public synchronized void reserveSlot(final String deliveryId, final LocalDateTime slot) {
         if (!isSlotFree(slot)) {
             throw new IllegalStateException("No drone available for the requested time");
         }
@@ -63,67 +63,67 @@ public class Drone implements AggregateRoot<DroneId> {
         registerEvent(new DroneReserved(id, deliveryId, slot, Instant.now()));
     }
 
-    public void releaseReservation(final String deliveryId) {
+    public synchronized void releaseReservation(final String deliveryId) {
         reservationsByDelivery.remove(deliveryId);
         this.assignedDeliveryId = null;
         syncStatusToReservations();
         registerEvent(new ReservationReleased(id, deliveryId, Instant.now()));
     }
 
-    public void completeReservation(final String deliveryId) {
+    public synchronized void completeReservation(final String deliveryId) {
         reservationsByDelivery.remove(deliveryId);
         this.assignedDeliveryId = null;
         syncStatusToReservations();
     }
 
-    public int reservationCount() {
+    public synchronized int reservationCount() {
         return reservationsByDelivery.size();
     }
 
-    public void assign(final String deliveryId) {
+    public synchronized void assign(final String deliveryId) {
         this.assignedDeliveryId = deliveryId;
         this.status = DroneStatus.ASSIGNED;
         registerEvent(new DroneAssigned(id, deliveryId, Instant.now()));
     }
 
-    public void startDelivery() {
+    public synchronized void startDelivery() {
         this.status = DroneStatus.IN_DELIVERY;
     }
 
-    public void updatePosition(final Position newPosition) {
+    public synchronized void updatePosition(final Position newPosition) {
         this.position = Objects.requireNonNull(newPosition);
         registerEvent(new PositionUpdated(id, newPosition, Instant.now()));
     }
 
-    public void arrived() {
+    public synchronized void arrived() {
         this.status = DroneStatus.ARRIVED;
         registerEvent(new DroneArrived(id, assignedDeliveryId, Instant.now()));
     }
 
-    private void syncStatusToReservations() {
+    private synchronized void syncStatusToReservations() {
         this.status = reservationsByDelivery.isEmpty()
                 ? DroneStatus.AVAILABLE
                 : DroneStatus.RESERVED;
     }
 
-    public void goOutOfService() {
+    public synchronized void goOutOfService() {
         this.status = DroneStatus.OUT_OF_SERVICE;
         registerEvent(new DroneOutOfService(id, Instant.now()));
     }
 
-    public DroneStatus getStatus() {
+    public synchronized DroneStatus getStatus() {
         return status;
     }
 
-    public Position getPosition() {
+    public synchronized Position getPosition() {
         return position;
     }
 
-    public String getAssignedDeliveryId() {
+    public synchronized String getAssignedDeliveryId() {
         return assignedDeliveryId;
     }
 
-    public boolean isCarryingPackage() {
+    public synchronized boolean isCarryingPackage() {
         return status == DroneStatus.IN_DELIVERY;
     }
 
@@ -133,16 +133,16 @@ public class Drone implements AggregateRoot<DroneId> {
     }
 
     @Override
-    public List<DomainEvent> getDomainEvents() {
-        return Collections.unmodifiableList(domainEvents);
+    public synchronized List<DomainEvent> getDomainEvents() {
+        return List.copyOf(domainEvents);
     }
 
     @Override
-    public void clearDomainEvents() {
+    public synchronized void clearDomainEvents() {
         domainEvents.clear();
     }
 
-    protected void registerEvent(final DomainEvent event) {
+    protected synchronized void registerEvent(final DomainEvent event) {
         domainEvents.add(event);
     }
 }
